[gd_scene load_steps=33 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/fonts/8-BIT WONDER.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://dodge_assets/art/height_bar.png" type="Texture" id=3]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://dodge_assets/art/plus.png" type="Texture" id=5]
[ext_resource path="res://dodge_assets/art/restartbutton(1).png" type="Texture" id=6]
[ext_resource path="res://dodge_assets/fonts/Fipps-Regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://dodge_assets/art/ui1.png" type="Texture" id=8]
[ext_resource path="res://dodge_assets/art/ui_close.png" type="Texture" id=9]
[ext_resource path="res://dodge_assets/art/ui6.png" type="Texture" id=10]
[ext_resource path="res://dodge_assets/art/ui_heart.png" type="Texture" id=11]
[ext_resource path="res://dodge_assets/art/ui2.png" type="Texture" id=12]
[ext_resource path="res://dodge_assets/art/ui_exit.png" type="Texture" id=13]
[ext_resource path="res://dodge_assets/art/coin2.png" type="Texture" id=14]
[ext_resource path="res://dodge_assets/art/coin1.png" type="Texture" id=15]
[ext_resource path="res://dodge_assets/art/minus.png" type="Texture" id=16]
[ext_resource path="res://dodge_assets/music/bgm_dev.wav" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 54
outline_size = 5
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=5]
action = "ui_select"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 64
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 28
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
outline_size = 2
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 30
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 25
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 150
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "base",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=15]
size = 256
outline_size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Name" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -296.0
margin_right = 240.0
margin_bottom = -224.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="height" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 240, 16 )
scale = Vector2( 1, 0.64 )
frames = SubResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_left = 8.0
margin_top = 48.0
margin_right = 9.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -304.0
margin_right = 164.0
margin_bottom = -204.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -224.0
margin_right = 252.0
margin_bottom = -124.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.694118, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aboutUs" type="Button" parent="."]
margin_left = 384.896
margin_top = 3.49905
margin_right = 480.896
margin_bottom = 87.4991
focus_mode = 0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
text = "i"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="."]
visible = false
margin_right = 96.0
margin_bottom = 84.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
text = "II"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -150.0
margin_right = 156.0
margin_bottom = -49.9998
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Message" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.333
margin_top = -182.834
margin_right = 237.667
margin_bottom = 85.1664
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=5 freq=2][rainbow freq=0.2 sat=10 val=20]Chroma

Zone[/rainbow][/tornado][/center]"
text = "Chroma

Zone"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 330 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Resume" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -213.81
margin_top = -227.572
margin_right = 6.19048
margin_bottom = -170.572
focus_mode = 0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartG" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -184.57
margin_top = -139.258
margin_right = -152.57
margin_bottom = -108.258
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="PauseMenu/RestartG"]
position = Vector2( 15.9087, 16.7373 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 6 )

[node name="ExitToM" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.501
margin_top = -139.872
margin_right = -83.5008
margin_bottom = -105.872
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="PauseMenu/ExitToM"]
position = Vector2( 17.0268, 16.1901 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 13 )

[node name="Message" type="Label" parent="PauseMenu"]
margin_left = -91.5445
margin_top = -73.1978
margin_right = 89.4555
margin_bottom = -33.1978
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Game Paused"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutUsPop" type="Sprite" parent="."]
visible = false
position = Vector2( 245.165, 380.615 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Message2" type="Label" parent="AboutUsPop"]
margin_left = -85.1183
margin_top = -63.208
margin_right = 74.8817
margin_bottom = 93.792
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Credits-

Prayas
Ujjawal"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closeAboutUs" type="Button" parent="AboutUsPop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5824
margin_top = -293.307
margin_right = -15.5824
margin_bottom = -257.307
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPop" type="Sprite" parent="."]
visible = false
position = Vector2( 245.165, 380.615 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="volume_text" type="Label" parent="SettingsPop"]
margin_left = -82.0841
margin_top = -43.7552
margin_right = 77.9159
margin_bottom = -6.7552
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volume"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vol_val" type="Label" parent="SettingsPop"]
margin_left = -47.5851
margin_top = 2.3327
margin_right = 44.4149
margin_bottom = 33.3327
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100%"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closeSettings" type="Button" parent="SettingsPop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5824
margin_top = -293.307
margin_right = -15.5824
margin_bottom = -257.307
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vol_dec" type="Button" parent="SettingsPop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.335
margin_top = -208.008
margin_right = -134.335
margin_bottom = -148.008
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
icon = ExtResource( 16 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vol_inc" type="Button" parent="SettingsPop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.1637
margin_top = -209.913
margin_right = 3.8363
margin_bottom = -146.913
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test" type="AudioStreamPlayer" parent="SettingsPop"]
stream = ExtResource( 17 )

[node name="GameOverPop" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 330 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="ResumeGame" type="Button" parent="GameOverPop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -189.336
margin_top = -140.084
margin_right = -137.336
margin_bottom = -98.0841
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 0.027451, 1, 0.933333, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
icon = ExtResource( 11 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartGame" type="Button" parent="GameOverPop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -118.5
margin_top = -140.0
margin_right = -86.5
margin_bottom = -109.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GameOverPop/RestartGame"]
position = Vector2( 15.9087, 16.7373 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 6 )

[node name="ExitToMenu" type="Button" parent="GameOverPop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -140.0
margin_right = -20.5
margin_bottom = -106.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 1, 0.976471, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GameOverPop/ExitToMenu"]
position = Vector2( 17.6407, 16.1901 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 13 )

[node name="Message" type="Label" parent="GameOverPop"]
margin_left = -92.3327
margin_top = -92.4971
margin_right = 88.6673
margin_bottom = 33.5029
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Uh oh...
Seems like 
you were hit !"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resumeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="resumeTime" type="Label" parent="."]
visible = false
margin_left = 181.851
margin_top = 273.594
margin_right = 331.851
margin_bottom = 423.594
custom_fonts/font = SubResource( 13 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="AnimatedSprite" parent="."]
position = Vector2( 33.8242, 50.7362 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 14 )
animation = "base"
frame = 1
playing = true

[node name="value" type="RichTextLabel" parent="coin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -511.5
margin_right = 2310.0
margin_bottom = -34.5
custom_fonts/normal_font = SubResource( 15 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="aboutUs" to="." method="_on_aboutUs_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/RestartG" to="." method="_on_RestartG_pressed"]
[connection signal="pressed" from="PauseMenu/ExitToM" to="." method="_on_ExitToM_pressed"]
[connection signal="pressed" from="AboutUsPop/closeAboutUs" to="." method="_on_closeAboutUs_pressed"]
[connection signal="pressed" from="SettingsPop/closeSettings" to="." method="_on_closeSettings_pressed"]
[connection signal="pressed" from="SettingsPop/vol_dec" to="." method="_on_vol_dec_pressed"]
[connection signal="pressed" from="SettingsPop/vol_inc" to="." method="_on_vol_inc_pressed"]
[connection signal="pressed" from="GameOverPop/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="GameOverPop/RestartGame" to="." method="_on_RestartGame_pressed"]
[connection signal="pressed" from="GameOverPop/ExitToMenu" to="." method="_on_ExitToMenu_pressed"]
[connection signal="timeout" from="resumeTimer" to="." method="_on_resumeTimer_timeout"]
